--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="instagram_primary">#E4405F</color>
+    <color name="twitter_primary">#1DA1F2</color>
 </resources>
